--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "eosactionsdumper",
   "version": "0.1.0",
   "description": "Tools for dumping eos actions to mongodb",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "bin": {
+    "eos-action-dumper": "./bin"
+  },
   "scripts": {
+    "build": "rimraf ./lib/ && babel ./src --experimental --source-maps-inline -d ./lib --copy-files LICENSE README.md",
+    "dev": "npm run build && DEBUG=error:* node --expose-gc ./bin",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,5 +35,18 @@
     "kht": "^0.0.8",
     "mongoose": "^5.4.19",
     "yargs": "^13.2.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/preset-env": "^7.4.1",
+    "eslint": "^5.15.3",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "rimraf": "^2.6.3"
   }
 }
