--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "rimraf ./lib/ && babel ./src --experimental --source-maps-inline -d ./lib --copy-files LICENSE README.md",
-    "dev": "npm run build && DEBUG=error:* node --expose-gc ./bin",
+    "dev": "node --expose-gc ./bin",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/bagaking/eosActionsDumper#readme",
   "dependencies": {
     "chalk": "^2.4.2",
+    "debug": "^4.1.1",
     "eosplayer": "^0.5.9",
     "kht": "^0.0.8",
     "mongoose": "^5.4.19",
@@ -48,5 +49,9 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "rimraf": "^2.6.3"
-  }
+  },
+  "files": [
+    "bin",
+    "lib"
+  ]
 }
