doc: readme.md, package name

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "eosactionsdumper",
+  "name": "eos-actions-dumper",
   "version": "0.1.0",
   "description": "Tools for dumping eos actions to mongodb",
   "main": "lib/index.js",
   "bin": {
-    "eos-action-dumper": "./bin"
+    "eos-actions-dumper": "./bin"
   },
   "scripts": {
     "build": "rimraf ./lib/ && babel ./src --experimental --source-maps-inline -d ./lib --copy-files LICENSE README.md",
